# svn-util

./: Cargo.toml  LICENSE  README.md  settings.toml
src/: app.rs  command.rs  config.rs  error.rs  event.rs  main.rs  todo.txt  ui.rs
src/app/: ui.rs
src/svn/: error.rs  filelist.rs  filetree.rs  mod.rs  state.rs
