[package]
name = "svn-util"
version = "0.1.0"
description = "A tui application to manage the current svn branch"
authors = ["Ben Jones <fetiddius@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
anyhow = "1.0.97"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
